--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-DB_URL=postgres://fatmeehAdmin:fatmeeh123@localhost:5432/MarryWell
+DB_URL=postgres://MarryWell:'MarryWell123'@localhost:5432/MarryWell;
