--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "material-table": "^1.57.2",
     "react": "^16.13.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
