--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.18.2",
+    "react-cookies": "^0.1.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2"
   },
